--- a/src/resource/views/partials/userNavigate.hbs
+++ b/src/resource/views/partials/userNavigate.hbs
@@ -63,6 +63,9 @@
   <div class="title">
     <a href="/all-products/new-arrival">HÀNG MỚI VỀ</a>
   </div>
+  <div class="title">
+    <a href="/orders/checking">ĐƠN HÀNG</a>
+  </div>
 </div>
 
 <script>
