--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -151,6 +151,7 @@
         slug: `{{product.slug}}`,
         name: `{{product.name}}`,
         price: `{{product.price}}`,
+        image: `{{product.avatar}}`,
         quantity: getQuantityValue.innerText
       };
 
@@ -193,6 +194,7 @@
         slug: `{{product.slug}}`,
         name: `{{product.name}}`,
         price: `{{product.price}}`,
+        image: `{{product.avatar}}`,
         quantity: getQuantityValue.innerText
       };
 
