--- a/src/public/css/adminAllProducts.css
+++ b/src/public/css/adminAllProducts.css
@@ -40,29 +40,40 @@
     }
   }
 
-  .table {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  table, th, td {
+    text-align: center;
   }
 
-  table, th, td {
-    /* border: 1px solid #ddd; */
-    border-collapse: collapse;
-    padding: 5px 0;
-    text-align: center;
-    max-width: 100%;
+  table {
+    width: 100%;
+    border-spacing: 0px 10px;
+    padding: 0px 10px;
   }
 
   th {
-    background-color: #D1A6A6;
+    background-color:#D1A6A6;
     height: 50px;
     a { text-decoration: none }
     i { color: black }
-    gap: 5px;
   }
 
-  tr:nth-child(even){background-color: #f2f2f2}
-  tr:nth-child(odd){background-color: white}
-  tr:hover {background-color: #D1A6A6;}
+  tr {
+    background-color:#F0F0F0;
+    height: 50px;
+
+    td:first-child {
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+    }
+    td:last-child {
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
+  }
+
+  tr:hover {
+    background-color: #D1A6A6;
+  }
 
   img {
     border-radius: 50%;
