--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -25,9 +25,8 @@
     {{> adminSidebar}}
   </header>
   
-  <main>
+  <main style="margin-left: 200px;">
     {{{body}}}
   </main>
-
 </body>
 </html>
