--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -24,14 +24,14 @@
 </head>
 <body>
   <header>
-    {{> userHeader }}
+    {{> userHeader}}
   </header>
   
   <nav>
     {{> userNavigate}}
   </nav>
   
-  <main>
+  <main style="margin-top: 170px;">
     {{{body}}}
   </main>
 
