--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -28,9 +28,9 @@
       <i class="fi fi-br-trash"></i>
       <p>Kho</p>
     </a>
-    <a href="/home" class="sidebar-button">
+    <a href="/" class="sidebar-button">
       <i class="fi fi-br-browser"></i>
-      <p>Trang Người Dùng</p>
+      <p></p>
     </a>
     <a href="/admin/update-profile" class="sidebar-button">
       <i class="fi fi-br-circle-user"></i>
