--- a/src/resource/views/users/ordersChecking.hbs
+++ b/src/resource/views/users/ordersChecking.hbs
@@ -1,5 +1,53 @@
 <div class="order-checking-container">
-    <h1>Hãy Nhập Mã Đơn Để Kiểm Tra Đơn Hàng Của Bạn Nhé !</h1>
-    <input type="text" placeholder="Nhập Mã Đơn Để Kiểm Tra Đơn Hàng">
-    <button>Kiểm Tra</button>
+    <form id="form-5">
+        <h1>Hãy Nhập Mã Đơn Để Kiểm Tra Đơn Hàng Của Bạn Nhé !</h1>
+        <input type="text" placeholder="Nhập Mã Đơn Hàng">
+        <button type="submit">Kiểm Tra</button>
+        <span class="error-message"></span>
+    </form>
 </div>
+
+<script>
+    var getForm = document.querySelector('form#form-5')
+    var getSubmitButton = getForm.querySelector('button')
+    var getOrderContainer = document.querySelector('div.order-checking-container')
+    var errorMessage = document.querySelector('span.error-message')
+
+    // when submit, the form will push the input value from user to the URL for backend
+    getSubmitButton.onclick = function() {
+        var orderCode = getForm.querySelector('input').value
+        var regex = /^[a-f\d]{24}$/i
+
+        // check code input from user
+        if (regex.test(orderCode)) {
+            // if matched, submit form and pass value to URL for backend
+            getForm.setAttribute('method', 'get')
+            getForm.setAttribute('action', `/orders/checking/${orderCode}`)
+            getForm.onsubmit = function() {}
+        } 
+        else {
+            // if not matched, prevent submit, enter again
+            getForm.onsubmit = function(e) { e.preventDefault() }
+            errorMessage.innerText = 'Ma san pham khong dung'
+        }
+    }
+
+    // if found user's order, display their order info 
+    if(`{{order}}`) {
+        var orderName = document.createElement('p')
+        orderName.innerText = `{{order.customerInfo.name}}`
+        getOrderContainer.appendChild(orderName)
+        var orderProcess = document.createElement('div')
+        orderProcess.setAttribute('class', 'order-process')
+        orderProcess.innerHTML = `
+            <i class="fi fi-ss-person-dolly"></i>
+            <i class="fi fi-bs-shipping-fast"></i>
+            <i class="fi fi-ss-check-circle"></i>
+        `
+        getOrderContainer.appendChild(orderProcess)
+        
+    } else {
+        errorMessage.innerText = 'khong tim thay don hang'
+    }
+
+</script>
