--- a/src/public/css/userOrdersChecking.css
+++ b/src/public/css/userOrdersChecking.css
@@ -32,4 +32,43 @@
     background-color: #D1A6A6;
     }
   }
+
+  .order-process {
+    width: 100%;
+  }
+
+  table {
+    width: 100%;
+    border-spacing: 0px 10px;
+    padding: 0px 10px;
+    text-align: center;
+
+    thead {
+      background-color: #D1A6A6;
+      height: 50px;
+      a { text-decoration: none }
+      i { color: black };
+    }
+
+    tbody {
+      background-color:#F0F0F0;
+      height: 50px;
+
+      td:first-child {
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+      }
+
+      td:last-child {
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+      }
+    }
+
+    /* tr:nth-child(even){background-color: #F0F0F0}
+    tr:nth-child(odd){background-color: white}
+    tr:hover {background-color: #D1A6A6;} */
+
+    a { text-decoration: none; color: black;}
+  }
 }
