--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -6,13 +6,14 @@
   <link rel="icon" type="image/svg+xml" href="../../img/4.jpg" />
   <link rel="stylesheet" href="/css/userAdvertise.css">
   <link rel="stylesheet" href="/css/userAllProducts.css">
+  <link rel="stylesheet" href="/css/userAllOrders.css">
   <link rel="stylesheet" href="/css/userFooter.css">
   <link rel="stylesheet" href="/css/userFooterNavigate.css">
   <link rel="stylesheet" href="/css/userHeader.css">
   <link rel="stylesheet" href="/css/userHome.css">
   <link rel="stylesheet" href="/css/userIntroduce.css">
   <link rel="stylesheet" href="/css/userNavigate.css">
-  <link rel="stylesheet" href="/css/userOrders.css">
+  <link rel="stylesheet" href="/css/userOrder.css">
   <link rel="stylesheet" href="/css/userOrdersChecking.css">
   <link rel="stylesheet" href="/css/userProduct.css">
   <link rel="stylesheet" href="/css/body.css">
