--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -22,7 +22,7 @@
 </div>
   
 <div class="header-button">
-  <a href="/orders" class="orders">
+  <a href="/all-orders" class="orders">
     <span class="orders-quantity"></span>    
     <i class="fi fi-rr-shopping-cart-add"></i>
   </a>
