--- a/src/resource/views/partials/userNavigate.hbs
+++ b/src/resource/views/partials/userNavigate.hbs
@@ -64,7 +64,7 @@
     <a href="/all-products/new-arrival">HÀNG MỚI VỀ</a>
   </div>
   <div class="title">
-    <a href="/orders/checking">ĐƠN HÀNG</a>
+    <a href="/all-orders/checking">ĐƠN HÀNG</a>
   </div>
 </div>
 
