--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -1,4 +1,4 @@
-<div class="order-container">
+<div class="all-orders-container">
   <div class="progress">
     <span>1</span>
     <progress id="first-progress" value="0" max="100"></progress>
