--- a/src/public/css/adminCreateProduct.css
+++ b/src/public/css/adminCreateProduct.css
@@ -34,7 +34,8 @@
       width: 100%;
       min-height: 30px;
       border-radius: 5px;
-      border-style: none;
+      text-indent: 10px;
+      border: none
     };
 
     #avatar {
